# codelicious

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .vscodeignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  USAGE_GUIDE.md  codelicious-1.0.0.vsix  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  setup.sh  test_hf.py  tsconfig.json  webpack.config.js
.claude/: settings.json
.claude/rules/: conventions.md  security.md
.codelicious/: STATE.md  config.json  review_performance.json  review_qa.json  review_reliability.json  review_security.json
.github/workflows/: ci.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  FINAL_STATUS.md  FIXES_APPLIED.md  GAPS_AND_OPTIMIZATIONS.md  OPTIMIZATION_REPORT.md  PRE_PUBLISH_CHECKLIST.md  QUICK_ACTION_PLAN.md  USAGE_GUIDE.md
docs/specs/: 00_master_spec.md  01_feature_cli_tooling.md  02_feature_agent_tools.md  03_feature_git_orchestration.md  04_feature_extensions.md  05_feature_dual_engine.md  06_production_hardening.md  07_sandbox_security_hardening.md  08_hardening_reliability_v1.md  09_security_reliability_v1.md  10_comprehensive_hardening_v1.md  11_mvp_hardening_v1.md  12_mvp_closure_v1.md  13_bulletproof_mvp_v1.md  14_hardening_v2.md  15_parallel_agentic_loops_v1.md  16_reliability_test_coverage_v1.md  17_security_quality_hardening_v1.md  18_operational_resilience_v1.md  19_code_quality_hardening_v1.md  20_security_reliability_closure_v1.md  21_coverage_hardening_documentation_v1.md  22_pr_dedup_spec_lifecycle_hardening_v1.md  23_security_closure_remaining_findings_v1.md  24_dead_code_removal_and_dedup_v1.md  25_repo_hygiene_and_test_consolidation_v1.md  26_spec_discovery_bugfix_v1.md  27_codelicious_v2_rewrite.md  28_bite_sized_continuous_prs_v1.md  spec-v29_gap_closure_v1.md  spec-v30_operational_resilience_and_idempotency_v1.md
scripts/: migrate_to_logger.py  performance-test.js  remove_emojis.py  validate-code-generation.ts
server/: embedding_server.py  start_server.sh
src/: extension.ts
src/__mocks__/: vscode.ts
src/__tests__/: critical-workflows.integration.test.ts  integration.test.ts
src/agents/: agentOrchestrator.ts  baseAgent.ts  codeReviewAgent.ts  errorRecovery.ts  modelConfig.ts  preFilterAgent.ts  securityAgent.ts  testingAgent.ts  types.ts  workflowVisualizer.ts
src/analytics/: analyticsManager.ts  analyticsViewProvider.ts
src/autonomous/: aiFixGenerator.ts  automaticTestGenerator.ts  autonomousBuilder.ts  autonomousWorkflow.ts  buildErrorFixer.ts  contextAwareCodeGenerator.ts  dependencyResolver.ts  endToEndProductBuilder.ts  errorDetector.ts  instructionFileReader.ts  intelligentPlanner.ts  intelligentProblemSolver.ts  iterativeRefinementEngine.ts  mlFixRanker.ts  multiLanguageSupport.ts  performanceOptimizer.ts  productionValidator.ts  professionalReadmeGenerator.ts  projectState.ts  realtimeCompiler.ts  requirementsParser.ts
src/cache/: cacheManager.ts  diskCache.ts  memoryCache.ts  semanticCache.ts
src/cli/: cliInterface.ts  tuiInterface.ts
src/codelicious/: __init__.py  __main__.py  _env.py  _io.py  agent_runner.py  budget_guard.py  build_logger.py  chunker.py  cli.py  config.py  context_manager.py  errors.py  executor.py  llm_client.py  logger.py  loop_controller.py  orchestrator.py  parser.py  planner.py  progress.py  prompts.py  sandbox.py  scaffolder.py  security_constants.py  spec_discovery.py  verifier.py
src/completion/: inlineCompletionProvider.ts
src/context/: contextCache.ts  incrementalIndexer.ts  persistentContextEngine.ts
src/core/: autonomousExecutor.ts  circuitBreaker.ts  configurationManager.ts  diffViewer.ts  enhancedExecutionEngine.ts  executionEngine.ts  extensionManager.ts  indexer.ts  intelligentRequestRouter.ts  memoryPressureMonitor.ts  parallelIndexer.ts  rateLimiter.ts  requestQueue.ts  secureStorage.ts  sessionManager.ts
src/distributed/: distributedProcessor.test.ts  (+4 more)
tests/: conftest.py  spec-v5.md  test_agent_runner.py  test_audit_logger.py  test_auth_preflight.py  test_budget_guard.py  test_build_logger.py  test_cache_engine.py  test_chunker.py  test_claude_engine.py  test_cli.py  test_command_runner.py  test_commit_chunk.py  test_config.py  test_config_overrides.py  test_context_manager.py  test_edge_case_fixtures.py  test_edge_cases.py  test_engine_base.py  test_engine_claude_chunk.py  test_engine_contract.py  test_engine_huggingface_chunk.py  test_engines.py  test_env.py  test_error_messages.py  test_executor.py  test_fs_tools.py  test_full_workflow.py  test_git_orchestrator.py  test_gpg_fallback.py  test_huggingface_engine.py  test_integration.py  test_integration_v11.py  test_intent_classifier.py  test_io.py  test_llm_client.py  test_logger.py  test_logger_sanitization.py  test_loop_controller.py  test_main.py  (+27 more)
(+259 files in other folders)
