[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codelicious"
version = "1.0.0"
description = "Headless autonomous developer CLI. Write specs, get PRs."
requires-python = ">=3.10"
authors = [
    {name = "Clay Good"},
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
codelicious = "codelicious.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]