[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codelicious"
version = "1.0.0"
description = "Headless autonomous developer CLI. Write specs, get PRs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Clay Good"},
]
keywords = ["ai", "autonomous", "developer", "cli", "llm", "claude", "codegen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "ruff>=0.4.0,<1.0",
    "bandit>=1.7.0,<2.0",
    "pip-audit>=2.6.0,<3.0",
    "pre-commit>=3.0.0,<5.0",
]

[project.urls]
Homepage = "https://github.com/clay-good/codelicious"
Repository = "https://github.com/clay-good/codelicious"
Issues = "https://github.com/clay-good/codelicious/issues"

[project.scripts]
codelicious = "codelicious.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=codelicious --cov-fail-under=90"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort (import sorting)
    "UP",    # pyupgrade (Python 3.10+ idioms)
    "B",     # flake8-bugbear (common bugs)
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
    "SIM117", # nested with statements (readability preference, not a bug)
    "SIM105", # contextlib.suppress (readability preference, not a bug)
    "UP007",  # X | Y union syntax (already using from __future__)
    "UP031",  # printf-string-formatting (% formatting is fine in logging)
    "RUF002", # ambiguous unicode in docstring (intentional test data)
    "RUF003", # ambiguous unicode in comment (intentional test data)
    "RUF012", # mutable class default (false positive on frozen dataclasses)
    "RUF043", # pytest.raises ambiguous pattern (regex is intentional)
]

[tool.bandit]
# B404: importing subprocess is expected — this is a CLI tool that runs subprocesses
# B603: subprocess without shell=True is the SECURE pattern (shell=False is intentional)
# B607: partial path for executables (git, claude, pytest, ruff) is standard CLI usage
skips = ["B404", "B603", "B607"]